# django-redis-task-lock

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: pytest.yml
django_redis_task_lock/: __init__.py
tests/: __init__.py  test_acquire_lock.py
