[metadata]
name = django-redis-task-lock
version = 0.5
author = Levi Anderson
description = Redis task lock decorator for django celery tasks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Lenders-Cooperative/django-redis-task-lock
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = django_redis_task_lock
python_requires = >=3.6
install_requires =
    django>=2.2.9