[metadata]
name = django-redis-task-lock
version = 0.8.1
author = Levi Anderson
description = Redis task lock decorator for django celery tasks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Lenders-Cooperative/django-redis-task-lock
classifiers =
    Programming Language :: Python :: 3
    Framework :: Django :: 4.2
    Framework :: Django :: 5.2
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages = django_redis_task_lock
python_requires = >=3.8
install_requires =
    django>=3.2.15,<6.0.0
